--- a/ejerciciosCss/assets/css/styles.css
+++ b/ejerciciosCss/assets/css/styles.css
@@ -1,21 +1,25 @@
-body {
-  background-color: lightblue;
-}
-
-h1 {
-  color: white;
+* {
   text-align: center;
-}
-
-p {
-  font-family: verdana;
-  font-size: 20px;
-}
-
-#miIndentificador {
   color: blue;
 }
 
-.miClase {
-  color: green;
+h1 {
+  text-align: center;
+  color: red;
 }
+
+h2 {
+  text-align: center;
+  color: red;
+}
+
+p {
+  text-align: center;
+  color: red;
+}
+
+
+/* h1, h2, p {
+  text-align: center;
+  color: red;
+} */
