--- a/ejerciciosCss/assets/css/styles.css
+++ b/ejerciciosCss/assets/css/styles.css
@@ -1,7 +1,19 @@
-.unaFuente { 
-    font-family: "Lucida Console", Courier, monospace;
+/* unvisited link */
+a:link {
+    color: green;
   }
-
-.otraFuente {
-    font-family: Georgia, "Times New Roman", Times, serif;
-}
+  
+  /* visited link */
+  a:visited {
+    color: green;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: red;
+  }
+  
+  /* selected link */
+  a:active {
+    color: yellow;
+  } 
