--- a/ejerciciosCss/assets/css/styles.css
+++ b/ejerciciosCss/assets/css/styles.css
@@ -1,8 +1,38 @@
-div {
-  background-color: blue;
-  color: white;
-  text-align: justify;/* left,center, justify*/
-  text-decoration: underline;
-  /*text-indent: 50px;*/
-  /*letter-spacing: -2px;*/
+.flex-container {
+  display: flex;
+  background-color: green;
+  /*flex-direction: column;*/
+  /*flex-direction: column-reverse;*/
+  /*flex-direction: row;*/
+  /*flex-direction: row-reverse;*/
+  /*flex-wrap: wrap;*/
+  /*flex-wrap: nowrap;*/
+  /*flex-wrap: wrap-reverse;*/
+  /*justify-content: center;*/
+  /*justify-content: flex-start;*/
+  /*justify-content: flex-end;*/
+  /*justify-content: space-around;*/
+  /*justify-content: space-between;*/
+  /*align-items: center;*/
+  /*align-items: flex-start;*/
+
 }
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 20px;
+  font-size: 20px;
+}
+
+/* .flex-container {
+  display: flex;
+  flex-direction: row;
+} */
+
+/* Responsive layout - makes a one column layout instead of a two-column layout */
+/* @media (max-width: 800px) {
+  .flex-container {
+    flex-direction: column;
+  }
+} */
