--- a/ejerciciosCss/assets/css/styles.css
+++ b/ejerciciosCss/assets/css/styles.css
@@ -1,15 +1,28 @@
-div {
-  border: 1px solid black;
-  /* margin-top: 100px;
-  margin-bottom: 100px;
-  margin-right: 150px;
-  margin-left: 80px; */
-  background-color: greenyellow;
-  margin: 25px 50px 75px 100px;
+/* Se muestran de color azul todos los enlaces que tengan
+   un atributo "class", independientemente de su valor */
+   a[class] { color: blue; }
 
-  padding-top: 50px;
-  padding-right: 30px;
-  padding-bottom: 50px;
-  padding-left: 80px;
+   /* Se muestran de color azul todos los enlaces que tengan
+      un atributo "class" con el valor "externo" */
+   a[class="externo"] { color: green; }
+   
+   /* Se muestran de color azul todos los enlaces que apunten
+      al sitio "http://www.ejemplo.com" */
+   a[href="http://www.ejemplo.com"] { color: brown; }
+   
+   /* Se muestran de color azul todos los enlaces que tengan
+      un atributo "class" en el que al menos uno de sus valores
+      sea "externo" */
+   a[class~="externo"] { color: yellow; }
+   
+   /* Selecciona todos los elementos de la página cuyo atributo
+      "lang" sea igual a "en", es decir, todos los elementos en inglés */
+   /* *[lang=en] { color: brown; } */
+   
+   /* Selecciona todos los elementos de la página cuyo atributo
+      "lang" empiece por "es", es decir, "es", "es-ES", "es-AR", etc. */
+   /* *[lang|="es"] { color : red } */
 
-}
+   .externo {
+    text-align:center;
+   }
