--- a/ejerciciosCss/assets/css/styles.css
+++ b/ejerciciosCss/assets/css/styles.css
@@ -1,28 +1,3 @@
-/* Se muestran de color azul todos los enlaces que tengan
-   un atributo "class", independientemente de su valor */
-   a[class] { color: blue; }
-
-   /* Se muestran de color azul todos los enlaces que tengan
-      un atributo "class" con el valor "externo" */
-   a[class="externo"] { color: green; }
-   
-   /* Se muestran de color azul todos los enlaces que apunten
-      al sitio "http://www.ejemplo.com" */
-   a[href="http://www.ejemplo.com"] { color: brown; }
-   
-   /* Se muestran de color azul todos los enlaces que tengan
-      un atributo "class" en el que al menos uno de sus valores
-      sea "externo" */
-   a[class~="externo"] { color: yellow; }
-   
-   /* Selecciona todos los elementos de la página cuyo atributo
-      "lang" sea igual a "en", es decir, todos los elementos en inglés */
-   /* *[lang=en] { color: brown; } */
-   
-   /* Selecciona todos los elementos de la página cuyo atributo
-      "lang" empiece por "es", es decir, "es", "es-ES", "es-AR", etc. */
-   /* *[lang|="es"] { color : red } */
-
-   .externo {
-    text-align:center;
-   }
+img {
+  float: left;/*right  none */
+}
