--- a/ejerciciosCss/assets/css/styles.css
+++ b/ejerciciosCss/assets/css/styles.css
@@ -1,3 +1,22 @@
-img {
-  float: left;/*right  none */
+* {
+  box-sizing: border-box;
+}
+
+.header {
+  border: 1px solid blue;
+  padding: 15px;
+}
+
+.menu {
+  width: 25%;
+  float: left;
+  padding: 15px;
+  border: 1px solid blue;
+}
+
+.main {
+  width: 75%;
+  float: left;
+  padding: 15px;
+  border: 1px solid red;
 }
