--- a/ejerciciosCss/assets/css/styles.css
+++ b/ejerciciosCss/assets/css/styles.css
@@ -1,22 +1,14 @@
-* {
-  box-sizing: border-box;
+body {
+  text-align: center;
 }
 
-.header {
-  border: 1px solid blue;
-  padding: 15px;
+p {
+  font-size: 1.5rem;
 }
 
-.menu {
-  width: 25%;
-  float: left;
-  padding: 15px;
-  border: 1px solid blue;
-}
-
-.main {
-  width: 75%;
-  float: left;
-  padding: 15px;
-  border: 1px solid red;
+/*El color cambiará a azul para dispositivos más pequeños*/
+@media (max-width: 600px) {
+  body {
+    background-color: #87ceeb;
+  }
 }
