--- a/ejerciciosCss/assets/css/styles.css
+++ b/ejerciciosCss/assets/css/styles.css
@@ -1,14 +1,23 @@
-body {
+.item1 { grid-area: header; }
+.item2 { grid-area: menu; }
+.item3 { grid-area: main; }
+.item4 { grid-area: right; }
+.item5 { grid-area: footer; }
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header header header header header header'
+    'menu main main main right right'
+    'menu footer footer footer footer footer';
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
-}
-
-p {
-  font-size: 1.5rem;
-}
-
-/*El color cambiará a azul para dispositivos más pequeños*/
-@media (max-width: 600px) {
-  body {
-    background-color: #87ceeb;
-  }
+  padding: 20px 0;
+  font-size: 30px;
 }
