--- a/ejerciciosCss/assets/css/styles.css
+++ b/ejerciciosCss/assets/css/styles.css
@@ -1,38 +1,35 @@
-.flex-container {
-  display: flex;
-  background-color: green;
-  /*flex-direction: column;*/
-  /*flex-direction: column-reverse;*/
-  /*flex-direction: row;*/
-  /*flex-direction: row-reverse;*/
-  /*flex-wrap: wrap;*/
-  /*flex-wrap: nowrap;*/
-  /*flex-wrap: wrap-reverse;*/
-  /*justify-content: center;*/
-  /*justify-content: flex-start;*/
-  /*justify-content: flex-end;*/
-  /*justify-content: space-around;*/
-  /*justify-content: space-between;*/
-  /*align-items: center;*/
-  /*align-items: flex-start;*/
-
+* {
+  box-sizing: border-box;
 }
 
-.flex-container > div {
-  background-color: #f1f1f1;
-  margin: 10px;
+/* Create four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 25%;
   padding: 20px;
-  font-size: 20px;
 }
 
-/* .flex-container {
-  display: flex;
-  flex-direction: row;
-} */
+/* Clear floats after the columns */
+.row:after {
+  content: "pie de fila";
+  display: table;
+  clear: both;
+}
 
-/* Responsive layout - makes a one column layout instead of a two-column layout */
-/* @media (max-width: 800px) {
-  .flex-container {
-    flex-direction: column;
+.row {
+  margin: 10px;
+}
+
+/* On screens that are 992px wide or less, go from four columns to two columns */
+@media screen and (max-width: 992px) {
+  .column {
+    width: 50%;
   }
-} */
+}
+
+/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
